initial submission folder

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,4 @@ data/
 # Checkpoints
 BEST_checkpoint_coco_5_cap_per_img_5_min_word_freq.pth.tar
 checkpoint_coco_5_cap_per_img_5_min_word_freq.pth.tar
+extract.py
