--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pandas
-numpy
-torch
-torchvision
-scikit-image
-nltk
+pandas==1.1.2
+numpy==1.19.5
+torch==1.10.0
+torchvision==0.11.1
+scikit-image==0.18.3
+nltk==3.6.3
